# QtFluentWidgetPlugin

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  FluentWidgetPlugin.pro  INSTALL.md  LICENSE  readme.md
resources/: icons.qrc
src/plugin/: fluentbuttonwidgetplugin.cpp  fluentbuttonwidgetplugin.h  fluentcardwidgetplugin.cpp  fluentcardwidgetplugin.h  fluentdrawerwidgetplugin.cpp  fluentdrawerwidgetplugin.h  fluentgraphcardwidgetplugin.cpp  fluentgraphcardwidgetplugin.h  fluentlistcardwidgetplugin.cpp  fluentlistcardwidgetplugin.h  fluentmessagebarwidgetplugin.cpp  fluentmessagebarwidgetplugin.h  fluentmodalwidgetplugin.cpp  fluentmodalwidgetplugin.h  fluentplaincardcontainerextension.cpp  fluentplaincardcontainerextension.h  fluentplaincardwidgetplugin.cpp  fluentplaincardwidgetplugin.h  fluentwidgetsplugin.cpp  fluentwidgetsplugin.h
src/widget/: fluentbuttonwidget.cpp  fluentbuttonwidget.h  fluentcardwidget.cpp  fluentcardwidget.h  fluentdrawerwidget.cpp  fluentdrawerwidget.h  fluentgraphcardwidget.cpp  fluentgraphcardwidget.h  fluentlistcardwidget.cpp  fluentlistcardwidget.h  fluentmessagebarwidget.cpp  fluentmessagebarwidget.h  fluentmodalwidget.cpp  fluentmodalwidget.h  fluentplaincardwidget.cpp  fluentplaincardwidget.h
